--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core: ^1.0.1
+  firebase_messaging: ^9.0.0
+  flutter_local_notifications: ^5.0.0-nullsafety.1
+  get_it: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
